--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,12 @@
-fastapi==0.83.0
-uvicorn[standard]==0.20.0
-sqlalchemy==1.4.46
+fastapi==0.63.0
+uvicorn==0.13.0
+sqlalchemy==1.3.24
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.5
-paramiko==2.11.0
-cryptography==3.4.8
-pydantic==1.10.13
-websockets==10.4
-aiofiles==0.8.0
-apscheduler==3.9.1
+paramiko==2.7.0
+cryptography==3.1.1
+pydantic==1.8.2
+websockets==8.1
+aiofiles==0.6.0
+apscheduler==3.6.3
