--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.63.0
 uvicorn==0.13.0
 sqlalchemy==1.3.24
-python-jose[cryptography]==3.3.0
+PyJWT==1.7.1
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.5
 paramiko==2.7.0
