Fix: Polyfill crypto via node --import for Node 16 compatibility

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "node --import ./polyfill-crypto.js ./node_modules/vite/bin/vite.js",
+    "build": "node --import ./polyfill-crypto.js ./node_modules/vite/bin/vite.js build",
     "preview": "vite preview"
   },
   "dependencies": {
