--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^2.2.2",
     "zustand": "^4.5.2"
   },
