Fix: Update gitignore and force add index-DMKxsjGn.js

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ venv/
 
 # Node
 node_modules/
-dist/
+# dist/  <-- Commented out to allow dist folder tracking, or use specific ignore
+!frontend/dist/
 
 # Logs
 *.log
